--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-.main-container, .button-container-left, 
+#main-container, .button-container-left, 
 .button-container-left-bottom, .button-container-right {
     display: flex;
 }
 
-.main-container {
+#main-container {
     height: 100vh;
     width: 100vw;
     flex-direction: column;
@@ -14,8 +14,15 @@
 button {
     height: 60px;
     width: 60px;
+    font-size: 1em;
 }
 
 #zero {
     width: 120px;
+}
+
+#display-container {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2em;
+    margin-bottom: 10px;
 }
