--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body {
+    background: linear-gradient(45deg, rgba(96,12,196,1) 0%, rgba(226,38,27,1) 71%, rgba(255,234,11,1) 100%);
+    background-size: contain:
+}
+
 #main-container, .button-container-left, 
 .button-container-left-bottom, .button-container-right {
     display: flex;
@@ -5,24 +10,46 @@
 
 #main-container {
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 button {
-    height: 60px;
-    width: 60px;
+    height: 80px;
+    width: 80px;
     font-size: 1em;
+    margin: 5px;
+    border: 1px solid white;
+    color: white;
+    background-color: #ffffff00;
+    transition: 150ms;
+}
+
+button:hover {
+    box-shadow: 0px 0px 11px 3px rgba(255,255,255,0.7);
+}
+
+button:active {
+    transform: scale(0.85);
 }
 
 #zero {
-    width: 120px;
+    width: 170px;
 }
 
 #display-container {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 2em;
+    font-size: 3em;
     margin-bottom: 10px;
+    color: white;
+}
+
+#divide {
+    font-size: 1.5em;
+}
+
+#subtract {
+    font-size: 1.5em;
 }
