--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,10 @@ button {
     transition: 150ms;
 }
 
-button:hover {
+@media (hover: hover) {
+    button:hover {
     box-shadow: 0px 0px 11px 3px rgba(255,255,255,0.7);
+    }
 }
 
 button:active {
