--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ body {
 
 #main-container {
     height: 100vh;
-    /* width: 100vw; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -37,13 +36,13 @@ button:active {
     transform: scale(0.85);
 }
 
-#zero {
+.zero {
     width: 170px;
 }
 
 #display-container {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 3em;
+    font-size: 2.5em;
     margin-bottom: 10px;
     color: white;
 }
